Release notes for SIP Express Router (ser)
***********************************************

$Id: NEWS,v 1.78 2008/04/14 01:46:03 janakj Exp $



2.1.0 changes

modules:
 - avp       - export new selects table to allow dissecting the content of an
               attribute by interpreting it as a "name-addr" value 
 - auth      - added extra authentication checks support, to protect
               against various reply attacks.
             - params:
                       - auth_extra_checks - flags specifying which extra
                          message part/parts will be checked for change before
                          allowing nonce reuse. See the auth module docs for
                          for more information (modules/auth/README).
 - blst      - new module containing script blacklist manipulations functions
               (the source of a message can be blacklisted, removed from the
                blacklist or checked for presence in the blacklist).
 - tm        - method for canceling unreplied branches can now be selected
               using the new cancel_b_method tm parameter.
             - support for adding a 503 reply source to the blacklist for
               the time specified in the Retry-After header (see the new tm
               parameters blst_503, blst_503_def_timeout, blst_503_min_timeout
               and blst_503_max_timeout).
             - different error replies for too many branches (500 but with
               different text), resolve error (478) or send error
               (477).
             - tm can be configured not to automatically send 100 replies
               for invites either globally (see the auto_inv_100 parameter)
               or on a per transaction basis (see t_set_auto_inv_100(...))
             - t_relay* error reply are delayed till the end of the script
               to allow the script writer to overwrite them
             - branches are always canceled hop by hop