@@ -1,13 +1,17 @@
 Release notes for SIP Express Router (ser)
 ***********************************************
 
-$Id: NEWS,v 1.78 2008/04/14 01:46:03 janakj Exp $
+$Id: NEWS,v 1.79 2008/04/23 21:20:43 bpintea Exp $
 
 
 
 2.1.0 changes
 
 modules:
+ - textops   - functions:
+                        - remove_hf_re("regexp") -- filter message headers out
+                          by matching the header name field against a regular
+                          expression.
  - avp       - export new selects table to allow dissecting the content of an
                attribute by interpreting it as a "name-addr" value 
  - auth      - added extra authentication checks support, to protect
